2003-08-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-this-url-1): Don't kill the emacs-w3m buffer
	when a process is in progress.
	(w3m-goto-url-new-session): Ditto.

2003-08-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-previous-page): Specify a history element of
	the previous page to the `w3m-goto-url' function as the 7th arg.
	(w3m-goto-url): Accept a history element as the 7th argument;
	specify nil as the 7th argument when recursively calling itself;
	use a given history element to examine the form data of the url
	to be visited.
	(w3m-goto-url-new-session): Specify nil to the `w3m-goto-url'
	function as the 7th argument.
	(w3m): Ditto.

2003-08-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-minimize-in-new-session): New user
	option.
	(w3m-history-set-current): Redefine as an inline function rather
	than a macro.
	(w3m-history-current-1): Abolish the function.
	(w3m-history-current-2): Abolish the function.
	(w3m-history-element): New function.
	(w3m-history-current): Abolish the funtction.
	(w3m-history-backward): Don't modify the current position pointer
	in the `w3m-history' variable.
	(w3m-history-forward): Simplify using `w3m-history-backward'.
	(w3m-history-copy): Minimize the history when
	`w3m-history-minimize-in-new-session' is non-nil.
	(w3m-history-plist-get): Abolish the `url' argument; complement
	the meaning of the `local' argument.
	(w3m-history-add-properties): Ditto.
	(w3m-history-plist-put): Ditto.
	(w3m-history-remove-properties): Ditto.
	(w3m-history-store-position): Don't specify the optional arguments
	to `w3m-history-add-properties'.
	(w3m-history-restore-position): Abolish the `url' argument; don't
	specify the optional arguments to `w3m-history-plist-get'.
	(w3m-history-minimize): Simplify using `w3m-history-element'.

	* w3m.el (w3m-view-previous-page): Don't specify the optional
	arguments to `w3m-history-plist-get' and
	`w3m-history-restore-position'.